# data_swarm

./: .env.example  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
configs/kb/: comms_patterns.yaml  org_units.yaml  politics_map.yaml  role_registry.yaml  stakeholder_profiles.yaml
configs/triage_policy/: core_prompt.md
prompts/knowledge/: decision_rights.md  definition_of_done_rubric.md  politics_safe_wording.md  task_types.md
prompts/stage/: comms.md  feedback.md  navigation.md  planner.md  stakeholder.md  triage.md
prompts/system/: global_system.md
scripts/: build_index.py
src/data_swarm/: __init__.py  cli.py  config.py  conversation.py  kb.py  llm.py  yaml_compat.py
src/data_swarm/agents/: base.py  communication.py  deliverable.py  feedback.py  navigation.py  planner.py  stakeholder_map.py  triage.py
tests/: test_attachments_and_feedback_stage.py  test_change_agent_repetition.py  test_comms_stage_gating.py  test_config.py  test_dependency_closure.py  test_dotenv.py  test_feedback_sanitization.py  test_init_kb_scaffold.py  test_init_triage_policy_scaffold.py  test_log_store.py  test_multiline_input.py  test_navigation_stage_gating.py  test_patch_safety.py  test_planner_stage_gating.py  test_policy_store_scaffold.py  test_repetition_detection.py  test_runner_stops_on_plan_not_approved.py  test_stakeholder_stage_gating.py  test_state_machine.py  test_transitions.py  test_triage_stage_approval_and_outputs.py  test_triage_stage_gating.py  test_triage_stage_resume.py
(+67 files in other folders)
